# csghub-mcp-servers

./: .gitignore  README.md  help.md  pyproject.toml
code/: README.md  app.py  pyproject.toml
code/src/csghub_mcp_server_code/: code.py  main.py
code/src/csghub_mcp_server_code/api_client/: __init__.py  code.py  user.py
dataflow/: README.md  app.py  pyproject.toml
dataflow/src/csghub_mcp_server_dataflow/: arguments.py  dataflow.py  main.py
dataflow/src/csghub_mcp_server_dataflow/api_client/: __init__.py  dataflow.py  dataset.py  user.py
dataset/: .tool-versions  README.md  app.py  pyproject.toml
dataset/src/csghub_mcp_server_dataset/: arguments.py  dataset.py  main.py
dataset/src/csghub_mcp_server_dataset/api_client/: __init__.py  constants.py  dataset.py  user.py
evaluation/: .gitignore  README.md  app.py  pyproject.toml
evaluation/src/csghub_mcp_server/api_client/: __init__.py
evaluation/src/csghub_mcp_server/utils/: constants.py
evaluation/src/csghub_mcp_server_evaluation/: arguments.py  evaluation.py  main.py
evaluation/src/csghub_mcp_server_evaluation/api_client/: __init__.py  cluster.py  dataset.py  evaluation.py  model.py  space_resources.py  user.py
evaluation/src/csghub_mcp_server_evaluation/utils/: constants.py
finetune/: README.md  app.py  pyproject.toml
finetune/src/csghub_mcp_server/: main.py
finetune/src/csghub_mcp_server/api_client/: __init__.py  finetune.py
finetune/src/csghub_mcp_server_finetune/: arguments.py  finetune.py  finetune_instance.py  finetune_job.py  main.py
finetune/src/csghub_mcp_server_finetune/api_client/: __init__.py  constants.py  dataset.py  finetune.py  finetune_instance.py  finetune_job.py  model.py  resource.py  runtime_framework.py  user.py
finetune/src/csghub_mcp_server_finetune/utils/: __init__.py  constants.py
inference/: README.md  app.py  pyproject.toml
inference/src/csghub_mcp_server/: inference.py  main.py
inference/src/csghub_mcp_server/api_client/: __init__.py
inference/src/csghub_mcp_server_inference/: arguments.py  inference.py  main.py
inference/src/csghub_mcp_server_inference/api_client/: __init__.py  inference.py  model.py  resource.py  runtime_framework.py  user.py
model/: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
model/src/csghub_mcp_server/: main.py
model/src/csghub_mcp_server/api_client/: __init__.py
model/src/csghub_mcp_server_model/: arguments.py  main.py  models.py
model/src/csghub_mcp_server_model/api_client/: __init__.py  constants.py  model.py  namespace.py  user.py
space/: README.md  app.py  pyproject.toml
space/src/csghub_mcp_server_space/: arguments.py  main.py  run.py  space.py
space/src/csghub_mcp_server_space/api_client/: __init__.py  cluster.py  constants.py  namespace.py  repo.py  resources.py  space.py  space_resources.py  user.py
space/src/csghub_mcp_server_space/utils/: __init__.py  constants.py
