[project]
name = "csghub-mcp-server-evaluation"
version = "0.1.0"
description = "CSGHub Evaluation MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.15.0",
    "requests>=2.32.5",
]

[project.scripts]
csghub-mcp-server-evaluation = "csghub_mcp_server_evaluation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csghub_mcp_server_evaluation"]
