[project]
name = "csghub-mcp-server-space"
version = "0.1.0"
description = "CSGHub MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.15.0",
    "requests>=2.32.5",
]

[project.scripts]
csghub-mcp-server-space = "csghub_mcp_server_space:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csghub_mcp_server_space"]
